app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: white;
  border: 1px solid rgb(211, 211, 211);
  height: 50px;
  position: fixed; /* Set the navbar to fixed position */
  top: 0; /* Position the navbar at the top of the page */
  width: 100%; /* Full width */
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 17px;
}
.navbar-lewagon .navbar-title {
  font-family: 'Abhaya Libre', Times, serif;
  text-align: center;
  font-size: 30px;
  color: $dark-grey;
}

.tabs-underlined {
  display: flex;
  align-items: center;
}

.tabs-underlined .tab-underlined {
  color: black;
  padding: 3px;
  margin: 8px;
  opacity: .4;
  cursor: pointer;
  text-decoration: none;
  border-bottom: 4px solid transparent;
}


.tab-underlined:hover{
  opacity: 1;
  border-bottom: 1px solid black;
}

